# SecureVault

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md  benchmark.cpp  benchmark_main.cpp  cli.cpp  file_io.cpp
docs/: ARCHITECTUR.md  CHANGELOG.md  SECURITY.md  file_format.md  security_considerations.md
include/: aes.h  crypto_engine.h  file_io.h  hmac.h  pbkdf2.h  secure_mem.h  secure_memory.h  vault_format.h
src/: attack_simulation.cpp  benchmark.cpp  cli.cpp  file_io.cpp  main.cpp
src/asm/: aes_round.asm  secure_wipe.asm  xor_core.asm
src/crypto/: aes.cpp  crypto_engine.cpp  pbkdf2.cpp  secure_memory.cpp
tests/: test_crypto.cpp
